sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:11: error: 'while' expected but '}' found.
       }
       ^AlgCombSort:14: error: 'while' expected but '}' found.
  }while (the gap is bigger than 1 or the last traversal swapped at least one pair)
  ^AlgCombSort:14: error: ')' expected but integer literal found.
  }while (the gap is bigger than 1 or the last traversal swapped at least one pair)
                                 ^