sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  gap = len;
  do{
     if (gap>1) then{
       gap = gap / 1.3}
     i = O
     while (i+gap < len) do{
       if( i and i+gap must be swapped ){
         do it
       }
       increase i by one
     }
  }while (the gap is bigger than 1 or the last traversal swapped at least one pair)
}